# cpp-learning-projects

./: README.md  new_project.ps1  new_project.sh  run.sh
PlaneManagement/: CMakeLists.txt  README.md  run.sh
PlaneManagement/include/: function.h  seats.h  variables.h
PlaneManagement/src/: buy_seat.cpp  cancel_seat.cpp  find_first_available.cpp  main.cpp  menu.cpp  seats.cpp  show_seating_plan.cpp
ds_and_algorithm/Singly_Linked_Lists/: .gitignore  CMakeLists.txt
ds_and_algorithm/Singly_Linked_Lists/include/: Linked_List.h  Node.h
ds_and_algorithm/Singly_Linked_Lists/src/: Linked_List.cpp  main.cpp
ds_and_algorithm/stack/: CMakeLists.txt
ds_and_algorithm/stack/include/: stack.h
ds_and_algorithm/stack/src/: main.cpp
ds_and_algorithm/stack/src/Stack/: Stack.cpp
marks_result/: CMakeLists.txt  README.md  build.sh  main.cpp
marks_result/src/: cal_grades.cpp  main.cpp
